Fix Container Size for Side Projects Info

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -30,7 +30,7 @@
     <div class="info-section">
       <div class="info-item">
         <mat-icon>location_on</mat-icon>
-        <span>Sauit Louis, MO</span>
+        <span>Saint Louis, MO</span>
       </div>
       <div class="info-item">
         <mat-icon>cake</mat-icon>
