--- a/src/app/cv/cv.component.scss
+++ b/src/app/cv/cv.component.scss
@@ -61,8 +61,8 @@ p{
 
 .dot {
   position: absolute;
-  left: -25px;  // Adjust this value to place the dot next to the h3
-  top: calc(1.6em / 2);  // Roughly half the height of an h3
+  left: -25px;
+  top: calc(1.6em / 2);
   transform: translateY(-50%);
   width: 15px;
   height: 15px;
@@ -101,7 +101,7 @@ p{
 }
 
 .details-content ul li {
-  max-width: 425px;  // you can adjust this value based on your preference
+  max-width: 425px;
   word-wrap: break-word;
   font-size: 20px;
 }
@@ -121,6 +121,6 @@ p{
 
 .hobby-header {
   display: flex;
-  align-items: center;  /* This will vertically center the items in case they have different heights */
-  gap: 10px;  /* Provides spacing between the icon and the heading */
+  align-items: center;
+  gap: 10px;
 }
