--- a/src/app/home-carousel/home-carousel.component.scss
+++ b/src/app/home-carousel/home-carousel.component.scss
@@ -1,27 +1,27 @@
 .carousel-container {
   width: 100%;
-  height: 100vh; /* This assumes it spans the full viewport height. Adjust as needed. */
+  height: 100vh;
   overflow: hidden;
-  position: relative; /* Allows for content to be layered on top */
-  z-index: -1; /* Places the carousel behind other content */
+  position: relative;
+  z-index: -1;
 }
 
 .carousel-container img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  position: absolute; /* Makes sure all images are layered on top of each other */
+  position: absolute;
   top: 0;
   left: 0;
 }
 
 .content-overlay {
-  position: absolute; /* Positions the content on top of the images */
-  top: 50%; /* Center the content vertically */
-  left: 50%; /* Center the content horizontally */
-  transform: translate(-50%, -50%); /* Completes the centering */
-  z-index: 1; /* Ensure it's above the images */
-  color: #FFF; /* Assuming white text for visibility on images. Adjust as necessary. */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  color: #FFF;
   background-color: rgba(47, 46, 46, 0.5);
   padding: 30px;
 }
