--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,6 +1,6 @@
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr; /* 2 columns */
+  grid-template-columns: 1fr 1fr;
   grid-gap: 16px;
   width: 100%;
 }
@@ -44,12 +44,12 @@ h1 {
   position: relative;
 }
 .progress-container p {
-  font-size: 1.5rem; /* Adjust as per your preference */
+  font-size: 1.5rem;
 }
 .progress-number {
   position: absolute;
   top: 0;
   right: 0;
   font-size: 20px;
-  transform: translate(0, -100%);  /* This will move the number up */
+  transform: translate(0, -100%);
 }
