--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -20,11 +20,10 @@
     <div class="description-section" [@slideInBottom]="isVisible ? '*' : 'void'">
       <h2>Full Stack Developer</h2>
       <p>
-        I'm a Full Stack developer specialized in .Net, SQL Server, Angular, and Azure.
-        Drawing from my substantial experience in the healthcare sector,
-        I excel at addressing technical challenges with precision.
-        My ambition is to use my technical expertise to drive improvements in specific industries.
-        I'm actively seeking a role in an innovative company to deploy impactful solutions for customers.
+        Full Stack developer specialized in .Net, SQL Server, Angular, and Azure.
+        Drawing from substantial experience in the healthcare sector,
+        excels at addressing technical challenges with precision.
+        Ambitious in using technical expertise to drive improvements in specific industries. Actively seeking a role in an innovative company to deploy impactful solutions for customers.
       </p>
 
     <div class="info-section">
