--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,15 +4,17 @@
   <div class="content-container" >
     <div class="profile-section" [@slideInTop]="isVisible ? '*' : 'void'">
       <div class="profile-picture">
-        <img src="/assets/images/lasvegas.jpg" alt="Codie Orberson" />
+        <a href="/assets/images/lasvegas.jpg">
+          <img src="/assets/images/lasvegas.jpg" alt="Codie Orberson" />
+        </a>
       </div>
 
       <div class="social-icons">
-        <a href="https://github.com/codieorberson" target="_blank" rel="noopener noreferrer">
-          <img class="icon" src="/assets/icons/github.png" alt="GitHub">
-        </a>
         <a href="https://linkedin.com/in/codie-orberson" target="_blank" rel="noopener noreferrer">
           <img class="icon"src="/assets/icons/linkedin.png" alt="LinkedIn">
+        </a>
+        <a href="https://github.com/codieorberson" target="_blank" rel="noopener noreferrer">
+          <img class="icon" src="/assets/icons/github.png" alt="GitHub">
         </a>
       </div>
     </div>
