--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -5,6 +5,9 @@
     max-width: 250px;
     border-radius: 50%;
 }
+.profile-picture img:hover{
+  transform: scale(1.05);
+}
 
 .about-container {
   width: 100%;
@@ -19,20 +22,6 @@ h1 {
   text-align: center;
   color: teal;
 }
-
-
-// h1 {
-//   font-size: 50px;
-//   padding-bottom: 50px;
-//   text-align: center;
-//   color: teal;
-//   text-decoration-line: underline;
-//   text-decoration-color: transparent;
-//   background-image: linear-gradient(to right, black 25%, black 75%);
-//   background-repeat: no-repeat;
-//   background-position: 0% 100%l
-//   background-size: 100% 2px;
-// }
 
 .content-container {
   display: grid;
@@ -89,11 +78,13 @@ mat-icon{
 
 }
 
-
-
 .icon{
   height: 80px;
   width: 80px;
+}
+
+.icon:hover{
+  transform: scale(1.05);
 }
 
 .social-icons {
@@ -101,6 +92,9 @@ mat-icon{
   justify-content: center;
   margin-top: 1rem;
 }
+
+
+
 h2 {
   font-size: 40px;
   padding-bottom: 20px;
@@ -111,4 +105,35 @@ h2 {
 p{
   font-size: 25px;
   line-height: 1.1;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  margin: 15% auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Close Button */
+.close {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  color: #f1f1f1;
+  font-size: 35px;
+  font-weight: bold;
+  cursor: pointer;
 }
