--- a/src/app/side-projects/side-projects.component.scss
+++ b/src/app/side-projects/side-projects.component.scss
@@ -11,6 +11,14 @@
   display: flex;
   flex-direction: column;
   max-height: 1000px;
+  border: 25px solid white;
+  box-shadow: 0 4px 8px rgb(51, 59, 61);
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+}
+
+.project-card:hover {
+  transform: scale(1.05);
 }
 
 mat-card-actions {
@@ -47,6 +55,11 @@ h1 {
   height: 40px !important;
 }
 
+.small-icon:hover{
+  transform: scale(1.10);
+
+}
+
 .details-toggle{
   background-color: #97b7dd;
   padding: 5px 10px;
@@ -54,6 +67,10 @@ h1 {
   margin-left: 10px;
   display: inline-block;
   font-size: 20px;
+}
+
+.details-toggle:hover{
+  transform: scale(1.05);
 }
 
 .project-card .mat-card-content {
@@ -75,6 +92,10 @@ h1 {
   padding: 5px 10px;
   border-radius: 20px;
   display: inline-block;
+}
+
+.project-card .show-description p:hover{
+  transform: scale(1.05);
 }
 
 .year {
