Add skills word art and info icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,9 @@
 
 <app-skills id="skills"></app-skills>
 
-<app-skills-collage id="app-skills-collage"></app-skills-collage>
+<!-- <app-skills-collage id="app-skills-collage"></app-skills-collage> -->
 
 <app-side-projects id="side-projects"></app-side-projects>
-
-<!-- <app-references id="references"></app-references> -->
 
 <app-contact id="contact"></app-contact>
 
