--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,23 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.skills-tooltip .mdc-tooltip__surface {
+  // max-width: unset !important;
+  // max-height: unset !important;
+  max-width: 300px !important;
+  font-size: 16px !important;
+  background-color: #97b7dd !important;
+  color: black !important;
+  line-height: 1.25 !important;
+  padding: 15px 20px !important;
+  border-radius: 40px !important;
+}
+
+// .details-toggle{
+//   background-color: #97b7dd;
+//   padding: 5px 10px;
+//   border-radius: 50px;
+//   margin-left: 10px;
+//   display: inline-block;
+//   font-size: 20px;
+// }
