Finish skills cleanup

--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -25,7 +25,6 @@ mat-card-title{
   display: flex;
   flex-direction: column;
   border-bottom: 3px solid #000;
-
 }
 
 h1 {
@@ -63,7 +62,7 @@ h1 {
   text-align: center;
   border-radius: 50%;
   background-color: #97b7dd;
-  color: black; // Text color
+  color: black;
   font-size: 20px;
   margin-left: 10px;
   cursor: pointer;
