add chat gpt for service call

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
 <app-side-projects id="side-projects"></app-side-projects>
 
 <app-contact id="contact"></app-contact>
+<app-chat-dialog></app-chat-dialog>
 
 <app-footer id="footer"></app-footer>
 
