--- a/src/app/chat-dialog/chat-dialog.component.scss
+++ b/src/app/chat-dialog/chat-dialog.component.scss
@@ -42,9 +42,7 @@
   padding: 10px;
   background-color: rgb(51, 59, 61);
   border-radius: 5px;
-
 }
-
 
 .row {
   flex: 1 0 auto;
@@ -52,8 +50,8 @@
   align-items: center;
   gap: 10px;
   margin: 10px;
+  position: relative;
 }
-
 
 .row:not(:last-child) {
   margin-bottom: 10px;
@@ -68,7 +66,6 @@
   width: 750px;
   resize: none;
 }
-
 
 .send-button {
   padding: 8px 16px;
@@ -101,7 +98,6 @@
   width: 800px;
   font-size: 18px;
   height:35px
-
 }
 
 .chat-button-container {
@@ -138,5 +134,23 @@
 
 textarea{
   background-color: lightgrey;
+}
 
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  margin-top: -20px;
+  margin-left: -20px;
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
+  border-top: 4px solid #000;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
