--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -52,6 +52,7 @@ h1 {
   right: 0;
   font-size: 20px;
   transform: translate(0, -100%);
+  font-weight: bold;
 }
 
 .info-icon {
@@ -76,4 +77,9 @@ h1 {
 
 p{
   font-weight: bold;
+}
+
+.experience-span{
+  font-size: 15px;
+  padding-left: 10px;
 }
