--- a/src/app/home-carousel/home-carousel.component.html
+++ b/src/app/home-carousel/home-carousel.component.html
@@ -1,7 +1,7 @@
 <div class="carousel-container">
   <img [src]="images[currentPictureIndex]" alt="Current Image">
   <div class="content-overlay">
-    <h1>Codie Orberson</h1>
+    <h1>Codie Orberson99</h1>
     <p>Developer {{currentTitle}}</p>
   </div>
 </div>
