--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -22,7 +22,7 @@
     <div class="description-section" [@slideInBottom]="isVisible ? '*' : 'void'">
       <h2>Full Stack Developer</h2>
       <p>
-        Full Stack developer specialized in .Net, SQL Server, Angular, and Azure.
+        Full Stack developer specialized in .NET, SQL Server, Angular, and Azure.
         Drawing from substantial experience in the healthcare sector,
         excels at addressing technical challenges with precision.
         Ambitious in using technical expertise to drive improvements in specific industries. Actively seeking a role in an innovative company to deploy impactful solutions for customers.
