--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -62,6 +62,7 @@ h1 {
   align-items: center;
   text-align: center;
   margin-bottom: 10px;
+  line-height: 1.1;
 }
 .info-section {
   gap: 1.5rem;
