--- a/src/app/side-projects/side-projects.component.html
+++ b/src/app/side-projects/side-projects.component.html
@@ -1,26 +1,26 @@
 <h1><b>Projects</b></h1>
 <div class="side-projects">
-  <div class="projects-container" *ngIf="shouldAnimate" [@slideIn]="projects.length">
-    <mat-card *ngFor="let project of projects" class="project-card">
-      <a [href]="project.imageUrl" target="_blank">
-        <img mat-card-image src="{{project.imageUrl}}" alt="{{project.name}}" class="clickable-image">
+  <div class="projects-container" *ngIf="shouldAnimate" [@slideIn]="activeProjects.length">
+    <mat-card *ngFor="let project of activeProjects" class="project-card">
+      <a [href]="project.ImageUrl" target="_blank">
+        <img mat-card-image src="{{project.ImageUrl}}" alt="{{project.Name}}" class="clickable-image">
       </a>
-      <mat-card-title>{{project.name}}</mat-card-title>
+      <mat-card-title>{{project.Name}}</mat-card-title>
       <mat-card-subtitle>Technologies:</mat-card-subtitle>
       <mat-card-content>
         <ul>
-          <li *ngFor="let tech of project.technologies">{{tech}}</li>
+          <li *ngFor="let tech of project.Technologies">{{tech}}</li>
         </ul>
       </mat-card-content>
       <mat-card-actions>
-        <a class="small-icon" [href]="project.sourceCodeLink" target="_blank" rel="noopener noreferrer">
+        <a class="small-icon" [href]="project.SourceCodeLink" target="_blank" rel="noopener noreferrer">
           <img class="icon small-icon" src="/assets/icons/github.png" alt="Source Code">
         </a>
-        <span class="spacer year">{{project.year}}</span>
+        <span class="spacer year">{{project.Year}}</span>
         <button class="details-toggle" mat-button (click)="showProjectDetails(project)">{{project.detailsButtonText}}</button>
       </mat-card-actions>
       <mat-card-content [class.show-description]="project.showDescription">
-        <p>{{project.description}}</p>
+        <p>{{project.Description}}</p>
       </mat-card-content>
     </mat-card>
   </div>
