--- a/src/app/side-projects/side-projects.component.scss
+++ b/src/app/side-projects/side-projects.component.scss
@@ -70,6 +70,7 @@ h1 {
   margin-left: 10px;
   display: inline-block;
   font-size: 20px;
+  border: .75px solid black;
 }
 
 .details-toggle:hover{
