--- a/src/app/chat-dialog/chat-dialog.component.scss
+++ b/src/app/chat-dialog/chat-dialog.component.scss
@@ -11,8 +11,9 @@
   overflow: hidden;
   background-color: #fff;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-}
+  z-index: 10;
 
+}
 
 .message-thread {
   flex-grow: 1;
