--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 2rem;
   border: 1px solid #ddd;
-  padding-bottom: 75px;
+  padding-bottom: 150px;
 
   h2 {
     font-size: 40px;
@@ -24,7 +24,49 @@
       margin-right: 1rem;
       color: teal;
     }
+
+
   }
+}
+.icon {
+  transition: transform 0.3s ease; /* Smooth transition */
+}
+.icon:hover{
+  transform: scale(1.1);
+  color: #97b7dd !important;
+}
+
+.email-form-card {
+  width: 100%;
+  max-width: 1000px;
+  margin-top: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgb(51, 59, 61);
+  will-change: transform;
+
+}
+
+
+@keyframes scaleUpBriefly {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+}
+
+.email-form-card:hover {
+  animation: scaleUpBriefly 1s ease;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.instructions {
+  font-style: italic;
+  margin-top: 1rem;
 }
 
 a {
@@ -35,4 +77,37 @@ a {
 
 a:hover {
   color: teal;
+}
+
+.button{
+  padding: 8px 16px !important;
+  color: white !important;
+  border: none !important;
+  border-radius: 4px !important;
+  cursor: pointer !important;
+  font-size: 16px !important;
+}
+
+.button:disabled {
+  background-color: #d3d3d3 !important;
+  color: #a9a9a9 !important;
+  cursor: not-allowed !important;
+}
+
+.send-button {
+  background-color: teal !important;
+  margin-right: 10px !important;
+}
+
+.clear-button {
+  background-color: #c04000 !important;
+}
+
+.button:hover{
+  font-weight: bold !important;
+  color: black !important;
+}
+
+.message-box{
+  height:300px !important;
 }
