--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -68,6 +68,8 @@ h1 {
   font-size: 20px;
   margin-left: 10px;
   cursor: pointer;
+  border: .75px solid black;
+
   font-weight: normal !important;
 }
 
