--- a/src/app/thank-you-dialog/thank-you-dialog.component.html
+++ b/src/app/thank-you-dialog/thank-you-dialog.component.html
@@ -3,7 +3,8 @@
 
 <h2 mat-dialog-title>Thank You!</h2>
 <mat-dialog-content>
-  Your message has been sent successfully. An email will be sent to me, and I will get back to you as soon as possible. Additionally, a confirmation email will be sent to you, confirming that I've received your message.
+  Your message has been sent successfully. An email will be sent to me, and I will get back to you as soon as possible.
+  <!-- Additionally, a confirmation email will be sent to you, confirming that I've received your message. -->
 </mat-dialog-content>
 <mat-dialog-actions>
   <button class='close-button' mat-button mat-dialog-close>Close</button>
