Remove Chat Dialog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,6 @@
 
 <app-contact id="contact"></app-contact>
 
-<app-chat-dialog></app-chat-dialog>
+<!-- <app-chat-dialog></app-chat-dialog> -->
 
 <app-footer id="footer"></app-footer>
