--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -9,6 +9,11 @@
       <h2>Education</h2>
       <div class="timeline-item">
         <div class="dot"></div>
+        <h3>AWS Cloud Practitioner Certificate</h3>
+        <p class="year">In-Progress</p>
+      </div>
+      <div class="timeline-item">
+        <div class="dot"></div>
         <h3>AZ-204 Certificate</h3>
         <p class="year">In-Progress</p>
       </div>
